--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "vee-validate": "^3.4.5",
         "vue": "^2.6.12",
         "vue-router": "^3.5.1",
-        "vuelidate": "^0.7.6"
+        "vuelidate": "^0.7.6",
+        "vuetify": "^2.4.9"
     }
 }
